change welcome to welcome,

--- a/website choudhrygroup.html
+++ b/website choudhrygroup.html
@@ -2,5 +2,5 @@
 <title>CH GROUP INTRANET</title>
 <hd1>CHOUDHRYGROUP</hd1>
 <p>IT Service</p>
-<p>Welecome to CHOUDHRYGROUP</p>
+<p>Welecom, To CHOUDHRYGROUP</p>
 </html>
