added services (help desk1,2

--- a/website choudhrygroup.html
+++ b/website choudhrygroup.html
@@ -2,6 +2,6 @@
 <title>CH GROUP INTRANET</title>
 <hd1>CHOUDHRYGROUP</hd1>
 <p>IT Service</p>
-<p>Welecom, To CHOUDHRYGROUP</p>
+<p>Help Desk 1 & Help Desk 2</p>
 <p>Projects</p>
 </html>
